<resources>

    <string name="app_name">Quiz App</string>
    <string name="name_creator0">Marios-Stamatis Katsaros</string>
    <string name="name_creator1">Pavlos Repin</string>
    <string name="app_introduction">A project made by:</string>
    <string name="app_rights">All Rights Reserved \u00a9</string>
    <string name="app_begin_but">Begin</string>
    <string name="app_off_mus">🎵</string>
    <string name="app_on_mus">\u23f9</string>
    <string name="choose_subj">CHOOSE SUBJECT</string>
    <string name="check_high">CHECK HIGHSCORES</string>
    <string name="fact">fun fact</string>
    <string name="fact1">A crocodile cannot stick its tongue out.</string>
    <string name="fact2">A shrimp\'s heart is in its head.</string>
    <string name="fact3">Some lipsticks contain fish scales.</string>
    <string name="fact4">If you sneeze too hard, you may fracture a rib.</string>
    <string name="fact5">Almonds are a member of the peach family.</string>
    <string name="fact6">Most people fall asleep in seven minutes.</string>
    <string name="fact7">A dime has 118 ridges around the edge.</string>
    <string name="fact8">Tigers have striped skin, not just striped fur.</string>
    <string name="fact9">An ostrich\'s eye is bigger than its brain.</string>
    <string name="fact10">A cat has 32 muscles in each ear.</string>
    <string name="Computer">Computer</string>
    <string name="Internet">Internet</string>
    <string name="World">World</string>
    <string name="Sports">Sports</string>
    <string name="Maths">Maths</string>
    <string name="about">ABOUT</string>
    <string name="button_calc">CALCULATOR</string>
    <string name="button_back">BACK</string>
    <string name="description">Do you want to sharpen your knowledge or test your skills in various subjects?
        If so, then this application is just for you! There are lots of different subjects to choose from,
        each one containing various questions that will test your expertise in each field. Do you think you
        have what it takes? Then what are you waiting for? Go ahead and try a quiz for yourself!
    </string>
    <string name="cool">OK, cool!</string>
    <string name="calc">CALCULATOR</string>
    <string name="num1">First number</string>
    <string name="num2">Second number</string>
    <string name="button_next">Next</string>
    <string name="button_cal">Calculator </string>
    <string name="info0">Info</string>
    <string name="info1">Would you like an email with additional info and your score?</string>
    <string name="info2">"If yes, please enter your email address in the text bellow."</string>
    <string name="affirmative">Yes,please!</string>
    <string name="negative">No, thanks!</string>
    <string name="score">Your score is: </string>
    <string name="congratulations">Congratulations!</string>
    <string name="sports1">Which is a court or lawn game played with lightweight rackets and a shuttlecock? </string>
    <string name="sports2">The equipment for what sport was found in the tomb of an Egyptian child buried about 3200 BCE? </string>
    <string name="sports3">Episkyros, calcio, and melee were early forms of which popular sport?"</string>
    <string name="sports4">In which major sport is substitution allowed while the game is in play?</string>
    <string name="sports5">Yokuzuna is the highest ranking attainable in which sport?</string>
    <string name="s_a1">Tennis</string>
    <string name="s_a2">Cricket</string>
    <string name="s_a3">Baseball</string>
    <string name="s_a4">Badminton</string>
    <string name="s_a5">Bowling</string>
    <string name="s_a6">Croquet</string>
    <string name="s_a7">Boules</string>
    <string name="s_a8">Billiard</string>
    <string name="s_a9">Fencing</string>
    <string name="s_a10">Boxing</string>
    <string name="s_a11">Football</string>
    <string name="s_a12">Gymnastics</string>
    <string name="s_a13">Ice Hockey</string>
    <string name="s_a14">Volleyball</string>
    <string name="s_a15">Chess</string>
    <string name="s_a16">Sumo</string>
    <string name="s_a17">Judo</string>
    <string name="s_a18">Buzkashi</string>
    <string name="internet1">WWW stands for</string>
    <string name="internet2">During which decade did the Internet become visible to the general public?</string>
    <string name="internet3">Information on the internet is shared by:</string>
    <string name="internet4">IP stands for:</string>
    <string name="internet5">Which of the following are not a transport layer protocol</string>
    <string name="i_a1">World Wide\nWeb</string>
    <string name="i_a2">Wireless World\nWeb</string>
    <string name="i_a3">World Wild\nWeb</string>
    <string name="i_a4">Wonderful World\nWeb</string>
    <string name="i_a5">1980s</string>
    <string name="i_a6">1970s</string>
    <string name="i_a7">1990s</string>
    <string name="i_a8">2000s</string>
    <string name="i_a9">Files</string>
    <string name="i_a10">Packets</string>
    <string name="i_a11">Forums</string>
    <string name="i_a12">Messages</string>
    <string name="i_a13">Internet\nProtocol</string>
    <string name="i_a14">Information\nPersonal</string>
    <string name="i_a15">In Protocol</string>
    <string name="i_a16">Internet\nPreference</string>
    <string name="i_a17">IP</string>
    <string name="i_a18">UDP</string>
    <string name="i_a19">TCP</string>
    <string name="i_a20">DCCP</string>
    <string name="computer1">Which of the following is not a computer peripheral?</string>
    <string name="computer2">Which was the first data saving storage device?</string>
    <string name="computer3">Who is thought to be the \'father\' of computers?</string>
    <string name="computer4">Which of these is not a computer operating system?</string>
    <string name="computer5">Which is the most famous OS?</string>
    <string name="c_a1">Keyboard</string>
    <string name="c_a2">Mouse</string>
    <string name="c_a3">Joystick</string>
    <string name="c_a4">CPU</string>
    <string name="c_a5">CD drive</string>
    <string name="c_a6">Floppy disk drive</string>
    <string name="c_a7">Williams Tube</string>
    <string name="c_a8">Diode</string>
    <string name="c_a9">Alan Turing</string>
    <string name="c_a10">Steve Jobs</string>
    <string name="c_a11">Von Neumann</string>
    <string name="c_a12">Charles Babbage</string>
    <string name="c_a13">Apple OS X</string>
    <string name="c_a14">Photoshop</string>
    <string name="c_a15">Microsoft Windows</string>
    <string name="c_a16">Linux</string>
    <string name="world1">In which country are the world’s 10 coldest cities located?</string>
    <string name="world2">Which country has three capital cities—Pretoria, Cape Town, and Bloemfontein?</string>
    <string name="world3">Thanks to its overseas territories, which country technically spans 12 time zones?</string>
    <string name="world4">Which continent is home to the most countries?</string>
    <string name="world5">Which of these is NOT one of the 13 countries crossed by the Equator?</string>
    <string name="w_a1">Russia</string>
    <string name="w_a2">USA</string>
    <string name="w_a3">Canada</string>
    <string name="w_a4">Sweden</string>
    <string name="w_a5">Nigeria</string>
    <string name="w_a6">South Africa</string>
    <string name="w_a7">Chile</string>
    <string name="w_a8">Australia</string>
    <string name="w_a9">France</string>
    <string name="w_a10">USA</string>
    <string name="w_a11">Spain</string>
    <string name="w_a12">Netherlands</string>
    <string name="w_a13">Asia</string>
    <string name="w_a14">Europe</string>
    <string name="w_a15">Africa</string>
    <string name="w_a16">South America</string>
    <string name="w_a17">Kenya</string>
    <string name="w_a18">Ecuador</string>
    <string name="w_a19">Indonesia</string>
    <string name="w_a20">Egypt</string>


</resources>